--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.11.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
